RESOLVED FIXED 221612
Fix warning introduced by r272580
https://bugs.webkit.org/show_bug.cgi?id=221612
Summary Fix warning introduced by r272580
Caio Lima
Reported 2021-02-09 09:41:42 PST
...
Attachments
Patch (3.45 KB, patch)
2021-02-09 09:45 PST, Caio Lima
no flags
Patch (4.92 KB, patch)
2021-02-09 09:56 PST, Caio Lima
no flags
Patch (4.92 KB, patch)
2021-02-09 14:14 PST, Caio Lima
no flags
Caio Lima
Comment 1 2021-02-09 09:45:12 PST
Caio Lima
Comment 2 2021-02-09 09:56:21 PST
EWS
Comment 3 2021-02-09 13:52:14 PST
/Volumes/Data/worker/Commit-Queue/build/JSTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Ryan Haddad
Comment 4 2021-02-09 14:07:19 PST
Comment on attachment 419736 [details] Patch Clearing flags on attachment: 419736 Committed r272612: <https://trac.webkit.org/changeset/272612>
Ryan Haddad
Comment 5 2021-02-09 14:07:21 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2021-02-09 14:08:13 PST
Caio Lima
Comment 7 2021-02-09 14:14:36 PST
Reopening to attach new patch.
Caio Lima
Comment 8 2021-02-09 14:14:39 PST
Note You need to log in before you can comment on or make changes to this bug.