Fix warning introduced by r272580 https://bugs.webkit.org/show_bug.cgi?id=221612

JSTests:

Unreviewd, update test262/config.yaml

Patch by Caio Lima <ticaiolima@gmail.com> on 2021-02-09

* test262/config.yaml:

Since `class-methods-private` also includes private accessors tests,
we should enable it only after https://bugs.webkit.org/show_bug.cgi?id=194435
gets closed.

Source/JavaScriptCore:

Unreviewed build fixes.

Patch by Caio Lima <ticaiolima@gmail.com> on 2021-02-09

* bytecode/CheckPrivateBrandVariant.cpp:
* bytecode/CheckPrivateBrandVariant.h:
* bytecode/SetPrivateBrandVariant.cpp:
* bytecode/SetPrivateBrandVariant.h:

Canonical link: https://commits.webkit.org/233875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272612 268f45cc-cd09-0410-ab3c-d52691b4dbfc