Source/JavaScriptCore/bytecode/SetPrivateBrandVariant.h
@@ -40,8 +40,6 @@ public:
 
     ~SetPrivateBrandVariant();
 
-    SetPrivateBrandVariant(const SetPrivateBrandVariant&);
-
     Structure* oldStructure() const { return m_oldStructure; }
     Structure* newStructure() const { return m_newStructure; }
 
